k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  labels:
    app: nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: nodejs
          image: registry.gitlab.com/sanjeev-gitlab/node_bsc/sanjeevbsc/nodebsc:0.0.1.RELEASE
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "512Mi"
              cpu: "1"
