k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    kubernetes.io/ingress.class: "ingress-nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: friday-node-server.internal.dev.apps.bsci.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: ${APP_NAME}-svc
              servicePort: 80
